<?xml version="1.0"?>
<package>
  <name>lego_loam</name>
  <version>1.0.0</version>
  <description>LeGO-LOAM from IROS 2018</description>

  <maintainer email="xxx@xxx.xxx">Tixiao Shan</maintainer>

  <license>BSD</license>

  <author >Tixiao Shan</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>libboost-dev</depend>
  <depend>visualization_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>OpenCV</depend>
  <depend>libgtsam-dev</depend>
  <depend>eigen</depend>
  <depend>libpcl-all-dev</depend>


  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export> 

</package>
